--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,11 @@ h1, h2 {
     font-size: 16px;
     border: 8px solid white;
     padding-top: 30px;
-    margin-left:  100%;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
+}
 
-
-
+.circle {
+    margin: 5px 0;
 }
 
 p {
@@ -40,7 +39,7 @@ p {
 .ipad {
     width: 80%;
     display: flex;
-    margin-left: 50px;
+    margin: auto;
 }
 
 #design {
@@ -59,3 +58,31 @@ p {
 #support {
     background-color: #7CB06C;
 }
+
+#dot .dotty {
+    color: black;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    font-size: small;
+    font-weight: bold;
+}
+
+
+
+#D1 {
+    background-color: #E6563B;
+}
+
+#D2 {
+    background-color: #EB9D3A;
+}
+
+#S {
+    background-color: #7CB06C;
+}
+
+#H {
+    background-color: #00ABA9;
+}
+
