--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@ h1, h2 {
     font-family: 'Abel', sans-serif;
 }
 
+#dot p .dotty {
+    margin-right: calc(100% - 20px);
+}
 
 #circles .circle {
     height: 105px;
